2009-10-02 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* test/xmltest/SAE*
	[ 2850167 ] IndicationProfile: CIM_ServiceAffectsElement creation 
	Added some testcases

2009-10-02  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* indCIMXMLHandler.c:
	[ 2871935 ] indCIMXMLHandler provider can crash on invalid destination

2009-10-01 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* interopServerProvider.c, indication.mof, default.reg.in
	[ 2850167 ] IndicationProfile: CIM_ServiceAffectsElement creation

2009-09-30  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* interopProvider.c:
	[ 2870959 ] Creation of IndicationFilter fails if missing property

	* indCIMXMLHandler.c:
	[ 2871055 ] Creation of IndicationHandlerCIMXML fails if missing prop

2009-09-24 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* sfcBroker.c:
	[ 2865635 ] Semaphore leak
	(patch from Surendra Kodali)

2009-09-22  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* result.c:
	[ 2818014 ] EnumerateClasses segfault w/DeepInheritance prop setting

	* internalProvider.c:
	[ 2793653 ] CreateInstance method of abstract class
	(patch by Shigeyoshi Hashi)
	
2009-09-22  Sean Swehla <smswehla@linux.vnet.ibm.com>

	* interopServerProvider.c:
	[ 2864486 ] IndicationProfile: CIM_IndicationService should persist

2009-09-21  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* getSchema.pre.in:
	[ 2863736 ] Bump downloaded CIM schema to 2.22

	* interopProvider.c:
	[ 2863774 ] interopProvider needs IndividualSubscriptionSupported prop
	
2009-09-18  Pratyusha Doddapaneni <pratyusha.d@in.ibm.com>
	* Makefile.am, test/stageschema.sh
	[ 2859978 ] TestProviders for SFCB

2009-09-17  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* httpAdapter.c:
	[ 2860163 ] Missing commRead error checks

2009-09-09  Surendra Kodali

         * wbemcat:
         [ 2858565 ] Need user and password support for wbemcat 

2009-09-09  Surendra Kodali

         * configure.ac: